Fix: Advanced-text > Block HTML Tag UI issue
The settings section Advanced > General > Block HTML tag select not visible properly

--- a/src/blocks/advanced-text/styles/style.scss
+++ b/src/blocks/advanced-text/styles/style.scss
@@ -200,3 +200,13 @@
       }
     }
   }
+
+.responsive-block-html-tag-wrapper {
+	> div {
+		> div {
+			display: grid !important;
+    		grid-template-columns: repeat(4, 1fr) !important;
+			grid-template-rows: auto !important;
+		}
+	}
+}
